--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
     ],
     "type": "library",
     "require": {
-        "php": "^7.0",
+        "php": ">=8.2.3",
         "psr/http-message": "^1.0",
-        "psr/log": "~1.0"
+        "psr/log": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.1",
-        "squizlabs/php_codesniffer": "^2.5",
-        "monolog/monolog": "^1.13"
+        "phpunit/phpunit": "^9.6.5",
+        "squizlabs/php_codesniffer": "^3.7.2",
+        "monolog/monolog": "3.*"
     },
     "autoload": {
         "psr-4": {"Bairwell\\": "src/"}
